[FIX] documents: Fix DocumentViewer's toolbar hidden behind content
Currently, When previewing a document, the toolbar (zoom in/out,rotate..) is
hidden behind the content due to height of the content viewer

So in this commit, the height 100% is already applied on o_viewer_content
from mail so remove it from documents and o_pdf_minimize_height is used
but it does not have any effect on document so remove that class too.

closes odoo/enterprise#14818

Taskid: 2349808
X-original-commit: 0cf5815da37cf466932481bd26fbe44b9951b76b

--- a/documents/static/src/owl/components/pdf_manager/pdf_manager.scss
+++ b/documents/static/src/owl/components/pdf_manager/pdf_manager.scss
@@ -2,10 +2,6 @@ $o-pdf-manager-background-color: #f1f1f1;
 $o-pdf-manager-separator-color: #F0AD4E;
 $o-pdf-manager-border-color: #b7b7b7;
 
-.o_modal_fullscreen > .o_viewer_content, .o_pdf_minimize_height {
-    height: auto;
-}
-
 .o_documents_pdf_manager {
     background-color: $o-pdf-manager-background-color;
     width: 100%;
